--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,11 @@
             <button type="button" class="popup__close"></button>
             <h3 class="popup__title">Редактировать профиль</h3>
             <form class="popup__form" name="edit-profile">
-                <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-                <input type="text" name="description" class="popup__input popup__input_type_description"
+                <input type="text" name="name" class="popup__input popup__input_type_name"  id="name-input" placeholder="Имя" required>
+                <span class="input-error" id="name-input-error"></span>
+                <input type="text" name="description" class="popup__input popup__input_type_description" id="description-input"
                        placeholder="Занятие" required>
-                <!--Можно добавить required, они про него знают-->
+                <span class="input-error" id="description-input-error"></span>
                 <button type="submit" class="button popup__button">Сохранить</button>
             </form>
         </div>
