--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             <h3 class="popup__title">Редактировать профиль</h3>
             <form class="popup__form" name="edit-profile">
                 <input type="text" name="name" class="popup__input popup__input_type_name"  id="name-input" placeholder="Имя" required>
-                <span class="input-error" id="name-input-error"></span>
+                <span class="name-input-error input-error"></span>
                 <input type="text" name="description" class="popup__input popup__input_type_description" id="description-input"
                        placeholder="Занятие" required>
                 <span class="input-error" id="description-input-error"></span>
