--- a/src/index.html
+++ b/src/index.html
@@ -37,11 +37,24 @@
             <button type="button" class="popup__close"></button>
             <h3 class="popup__title">Редактировать профиль</h3>
             <form class="popup__form" id="profileForm" name="edit-profile">
-                <input type="text" name="name" class="popup__input popup__input_type_name"  id="name-input" placeholder="Имя" required>
+                <input
+                        type="text"
+                        name="name"
+                        class="popup__input popup__input_type_name"
+                        id="name-input"
+                        placeholder="Имя"
+                        required
+                >
                 <span class="name-input-error input-error"></span>
-                <input type="text" name="description" class="popup__input popup__input_type_description" id="description-input"
-                       placeholder="Занятие" required>
-                <span class="input-error" id="description-input-error"></span>
+                <input
+                        type="text"
+                        name="description"
+                        class="popup__input popup__input_type_description"
+                        id="description-input"
+                        placeholder="Занятие"
+                        required
+                >
+                <span class="description-input-error input-error"></span>
                 <button type="submit" class="button popup__button">Сохранить</button>
             </form>
         </div>
@@ -51,10 +64,24 @@
             <button type="button" class="popup__close"></button>
             <h3 class="popup__title">Новое место</h3>
             <form class="popup__form" id="placeForm" name="new-place">
-                <input type="text" name="place-name" class="popup__input popup__input_type_card-name"
-                       placeholder="Название" required>
-                <input type="url" name="link" class="popup__input popup__input_type_url"
-                       placeholder="Ссылка на картинку" required>
+                <input
+                        type="text"
+                        name="place-name"
+                        class="popup__input popup__input_type_card-name"
+                        id="placeName-input"
+                        placeholder="Название"
+                        required
+                >
+                <span class="placeName-input-error input-error"></span>
+                <input
+                        type="url"
+                        name="link"
+                        class="popup__input popup__input_type_url"
+                        id="placeLink-input"
+                        placeholder="Ссылка на картинку"
+                        required
+                >
+                <span class="placeLink-input-error input-error"></span>
                 <button type="submit" class="button popup__button">Сохранить</button>
             </form>
         </div>
@@ -71,7 +98,7 @@
 <template id="card-template">
     <!--Про тег темплейт студенты узнают из уроков 4-го спринта-->
     <li class="places__item card">
-        <img class="card__image" src="" alt="" />
+        <img class="card__image" src="" alt=""/>
         <button type="button" class="card__delete-button"></button>
         <!--Фоновое, инлайном-->
         <div class="card__description">
