--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,24 @@
             <p class="popup__caption"></p>
         </div>
     </div>
+    <div class="popup popup_type_update_avatar popup_is-animated">
+        <div class="popup__content">
+            <button type="button" class="popup__close"></button>
+            <h3 class="popup__title">Обновить аватар</h3>
+            <form class="popup__form" id="updateAvatarForm" name="update-avatar">
+                <input
+                        type="url"
+                        name="link"
+                        class="popup__input popup__input_type_url"
+                        id="avatar-input"
+                        placeholder="Ссылка на картинку"
+                        required
+                >
+                <span class="avatar-input-error input-error"></span>
+                <button type="submit" class="button popup__button">Сохранить</button>
+            </form>
+        </div>
+    </div>
 </div>
 <!--Относится к реализации 4-го спринта-->
 <template id="card-template">
@@ -104,7 +122,10 @@
         <div class="card__description">
             <h2 class="card__title">
             </h2>
-            <button type="button" class="card__like-button"></button>
+            <div class="card__likes">
+                <button type="button" class="card__like-button"></button>
+                <span class="card__like-count">0</span>
+            </div>
         </div>
     </li>
 </template>
