--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
                         data-length-error="Название должно содержать от 2 до 30 символов"
 
                 >
-                <span id="placeName-input-error" class="popup__input_type_error" for="place-name-input">></span>
+                <span id="placeName-input-error" class="popup__input_type_error" for="place-name-input"></span>
                 <input
                         type="url"
                         name="placeLink"
